chore: no UI and some small API skeleton
