# openapi.json
@@ -47,10 +47,10 @@
         }
     },
     "paths": {
-        "/ocs/v2.php/apps/musicmanager/api": {
+        "/ocs/v2.php/apps/musicmanager/tracks": {
             "get": {
-                "operationId": "api-index",
-                "summary": "An example API endpoint",
+                "operationId": "api-all-tracks",
+                "summary": "An API endpoint to get all tracks",
                 "tags": [
                     "api"
                 ],
